--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: phoenix_card
 description: phoenix 将做为企业级基础组件:Card,提供项目支持。
-version: 0.0.1
+version: 1.0.0
 homepage: 'https://github.com/vsguji/phoenix_card.git'
 
 environment:
@@ -10,7 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  phoenix_base: ^1.0.7
+  phoenix_text: ^1.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
